# CLAP-Expression-Tests

./: .gitignore  CMakeLists.txt  readme.md
common/: event-logger-gui.hpp  event-logger.hpp  event-string.hpp  gui.hpp  log-event.hpp  plugin.hpp  polyphonic-voice-info.hpp
note-generator/: CMakeLists.txt  note-generator-gui.cpp  note-generator-gui.hpp  note-generator.cpp
note-logger/: CMakeLists.txt  note-logger-gui.cpp  note-logger-gui.hpp  note-logger.cpp
